I noticed a scrollbar at the bottom of my page, I had to hunt down the elements that were styled in ways that was causing the issue and figure out how to lay everything out in a way that it fixed the issue. I also took the opportunity to reorganize my css and remove html I no longer needed.

--- a/style/index.css
+++ b/style/index.css
@@ -24,8 +24,25 @@ vertical-align: baseline;
 /* end resets */
 
 .container {
+    width: 100%;
     margin: 0;
-    padding: 0;
+}
+
+.header-section, .footer-section {
+    padding: 0px;
+}
+
+/* header */
+
+header {
+    height: 170px;
+    width: 100%;
+    padding: 30px 0px;
+    background-color: #e6e3e3;
+}
+
+header h1 {
+    font-size: xxx-large;
 }
 
 .container header nav a {
@@ -39,48 +56,36 @@ vertical-align: baseline;
     background-color: rgb(87, 87, 87);
   }
 
-header, footer {
-    height: 100px;
-    width: 100%;
-    padding: 25px;
-    background-color: #e6e3e3;
-}
-
-header h1 {
-    font-size: xxx-large;
-}
-
-footer h3 {
-    font-size: x-large;
-}
-
 nav {
-    padding: 15px 10px;
+    padding: 60px 10px 20px;
+}
+
+/* main content */
+
+.main-content {
+    padding: 0px;
 }
 
 .top-section {
     height: 400px;
-    width: 100%;
-    padding: 10px;
+    /* width: 100%; */
+    padding: 0px;
     background-color: #fdfdfd;
-}
-
-.bottom-section {
-    height: 700px;
-    width: 100%;
-    padding: 10px;
-    background-color: #fdfdfd;
+    display: flex;
+    flex-direction: row;
 }
 
 .topleft {
-    width: 49%;
-    float: left;
+    width: 48%;
+    margin: 0;
+    /* float: left; */
 }
 
 .topright {
-    width: 49%;
-    float: right;
-    padding: 150px 10px 0px;
+    width: 48%;
+    margin: 0;
+    /* float: right; */
+    /* padding: 150px 10px 0px; */
 }
 
 .topright h2 {
@@ -102,6 +107,18 @@ nav {
     font-size: large;
 }
 
+.bottom-content {
+    margin: 0;
+    padding: 5px;
+}
+
+.bottom-section {
+    height: 700px;
+    width: 100%;
+    padding: 0px;
+    background-color: #fdfdfd;
+}
+
 ul {
     list-style: none;
     display: flex;
@@ -113,12 +130,32 @@ ul li {
     margin: 10px;
 }
 
+/* footer */
+
+.footer-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+footer h3 {
+    font-size: x-large;
+}
+
 footer button {
+    display: flex;
+    justify-content: center;
     border: 1px solid lightgray;
     padding: 10px;
-    display: inline-block;
     color: white;
     text-decoration: none;
     margin-bottom: 10px;
     background-color: rgb(87, 87, 87);
+}
+
+footer {
+    height: 170px;
+    width: 100%;
+    padding: 30px 0px;
+    background-color: #e6e3e3;
 }
